# DeepMimic

DeepMimicCore/: CMakeLists.txt
android/DeepMimic/: CMakeLists.txt  build.gradle  local.properties
android/DeepMimic/includes/GL/: eglew.h  freeglut_std.h  gl.h  glesew.h  glew.h  glu.h
android/DeepMimic/src/main/: AndroidManifest.xml
android/DeepMimic/src/main/jni/: glew.c
android/DeepMimic/src/main/res/values/: strings.xml
